force-app/main/default/objects/ucinn_ascendv2__Junction_Creator_Setting__mdt/fields/ucinn_ascendv2__Base_Fields__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Base_Fields__c</fullName>
    <label>Base Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>