force-app/main/default/objects/ucinn_ascendv2__Junction_Creator_Setting__mdt/fields/ucinn_ascendv2__Record_Type_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Mapping__c</fullName>
    <label>Record Type Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>